# mfi-alm

./: .flake8  .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: ci.yaml
data/: asset_tape.csv  config.json  policyholder_tape.csv  policyholder_tape.py  policyholder_tape_generator.py
data/outputs/: output_base_report.csv  output_base_report_detailed.csv  output_crazy_markets_report.csv  output_crazy_markets_report_detailed.csv  output_double_whammy_report.csv  output_double_whammy_report_detailed.csv  output_health_crisis_report.csv  output_health_crisis_report_detailed.csv
documentation/: alm_idea.pptx
experimental/: 3_create_policy_file.csv  5_mortality_jupyter_notebook.ipynb  Liability cash flow simulation.ipynb  alm_engine.py  asset_tape.csv  asset_type_pricing.ipynb  mortality_table.csv  placeholder function.ipynb
src/assets/: bonds.py
src/liabilities/: annuities.py  mortality.py
src/mfi_alm/: utils.py
src/mfi_alm/assets/: __init__.py  asset.py  asset_portfolio.py  asset_portfolio_loader.py  bonds.py
src/mfi_alm/engine/: alm_engine.ipynb  alm_engine.py
src/mfi_alm/liabilities/: LiabilityPortfolio.py  __init__.py  annuities.py  insurance.py  liability.py  liability_portfolio.py  liability_portfolio_loader.py  mortality.py  policyholder.py
tests/unit/: test_LiabilityPortfolio.py  test_annuities.py  test_asset.py  test_asset_portfolio.py  test_asset_portfolio_loader.py  test_fixed_bonds.py  test_insurance.py  test_liability_portfolio.py  test_liability_portfolio_loader.py  test_mortality.py  test_policyholder.py
