[project]
name = "mfi-alm"
version = "0.1.0"
description = ""
authors = [
    {name = "Basil Singer",email = "basil.singer@utoronto.ca"}
]
readme = "README.md"
requires-python = ">=3.13"


[tool.poetry.group.dev.dependencies]
black = ">=25.1.0"
flake8 = ">=7.2.0"
pytest = ">=7.4.4"

[tool.black]
line-length = 120
target-version = ["py313"]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
